FIX: spacing issues in alternative web engines

--- a/styles/pages/shop.css
+++ b/styles/pages/shop.css
@@ -33,3 +33,6 @@ main {
     gap: 25px;
 }
 
+.products > * + * { margin-left: 25px;}
+
+
