--- a/styles/sections/shop.css
+++ b/styles/sections/shop.css
@@ -13,4 +13,5 @@
     flex-direction: column;
 }
 
+.card_container > * + * { margin-left: 25px;}
 
